--- a/Examples/Lorem Ipsum Mac OS X Example/Lorem Ipsum macOS Example.xcodeproj/xcshareddata/xcschemes/Lorem Ipsum macOS Example.xcscheme
+++ b/Examples/Lorem Ipsum Mac OS X Example/Lorem Ipsum macOS Example.xcodeproj/xcshareddata/xcschemes/Lorem Ipsum macOS Example.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "80ECD2BB174FA08000115FD0"
                BuildableName = "Lorem Ipsum Mac OS X Example.app"
-               BlueprintName = "Lorem Ipsum Mac OS X Example"
-               ReferencedContainer = "container:Lorem Ipsum Mac OS X Example.xcodeproj">
+               BlueprintName = "Lorem Ipsum macOS Example"
+               ReferencedContainer = "container:Lorem Ipsum macOS Example.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -34,8 +34,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "80ECD2BB174FA08000115FD0"
             BuildableName = "Lorem Ipsum Mac OS X Example.app"
-            BlueprintName = "Lorem Ipsum Mac OS X Example"
-            ReferencedContainer = "container:Lorem Ipsum Mac OS X Example.xcodeproj">
+            BlueprintName = "Lorem Ipsum macOS Example"
+            ReferencedContainer = "container:Lorem Ipsum macOS Example.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -57,8 +57,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "80ECD2BB174FA08000115FD0"
             BuildableName = "Lorem Ipsum Mac OS X Example.app"
-            BlueprintName = "Lorem Ipsum Mac OS X Example"
-            ReferencedContainer = "container:Lorem Ipsum Mac OS X Example.xcodeproj">
+            BlueprintName = "Lorem Ipsum macOS Example"
+            ReferencedContainer = "container:Lorem Ipsum macOS Example.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -76,8 +76,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "80ECD2BB174FA08000115FD0"
             BuildableName = "Lorem Ipsum Mac OS X Example.app"
-            BlueprintName = "Lorem Ipsum Mac OS X Example"
-            ReferencedContainer = "container:Lorem Ipsum Mac OS X Example.xcodeproj">
+            BlueprintName = "Lorem Ipsum macOS Example"
+            ReferencedContainer = "container:Lorem Ipsum macOS Example.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
